--- a/project2/src/main/resources/application.properties
+++ b/project2/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=1234
  
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 server.port=9099
