Fix ShoesAdmin: template + Upload File(In progress)

--- a/ShoesAdmin/package.json
+++ b/ShoesAdmin/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-datatables": "^6.0.0",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "firebase": "^5.2.0",
     "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
     "rxjs": "^5.5.6",
