--- a/project2/src/main/resources/application.properties
+++ b/project2/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/poly_project2?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
   
  
  
