--- a/ShoesAdmin/package.json
+++ b/ShoesAdmin/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.1",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -30,6 +31,7 @@
     "firebase": "^5.2.0",
     "fusioncharts": "^3.12.2",
     "fusionmaps": "^3.12.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
     "rxjs": "^5.5.6",
