--- a/karl-shop/package.json
+++ b/karl-shop/package.json
@@ -28,6 +28,7 @@
     "angularx-social-login": "^1.2.0",
     "core-js": "^2.4.1",
     "firebase": "^5.0.4",
+    "lodash": "^4.17.10",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
